[FIX] website: fix multiple bug on image gallery
Steps to reproduce:
- Open the website builder.
- drag and drop the s_image_gallery snippets in the page.
- add an image to the carousel.
- The image inserted inherit the padding of the carousel.
Wrong options are also added in the image section (bug 1)
- Add a big padding on the carousel.
- The image is not responsive and disapear behind the padding. (bug 2)
- Remove all the image.
- The snippets height isn't reduced and the "add image" buttons is
behind the overlay. (bug 3)
- Add an image back the carousel.
- The carousel indicators aren't visible because the 'invert colors' has
been reset. (bug 4)

This commit fix the 4 bugs enumerated here above.

--- a/addons/website/static/src/snippets/s_image_gallery/002.scss
+++ b/addons/website/static/src/snippets/s_image_gallery/002.scss
@@ -152,7 +152,7 @@
                 }
             }
 
-            .carousel-dark {
+            &.carousel-dark {
                 .carousel-control-prev, .carousel-control-next {
                     &:hover {
                         background: rgba($carousel-indicator-active-bg, .2);
@@ -170,7 +170,7 @@
                 filter: $carousel-dark-control-icon-filter;
             }
 
-            .carousel-dark {
+            &.carousel-dark {
                 .carousel-control-prev-icon, .carousel-control-next-icon {
                     filter: none;
                 }
@@ -289,7 +289,7 @@
                 }
             }
 
-            .carousel-dark {
+            &.carousel-dark {
                 button {
                     color: $carousel-dark-indicator-active-bg;
 
